# medreg-copilot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  compose.production.yaml  compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260716_0001_registration_applications.py  20260716_0002_remove_redundant_code_constraint.py  20260716_0003_regulation_sources.py  20260716_0004_regulation_documents.py  20260716_0005_async_document_jobs.py  20260716_0006_document_structure.py  20260716_0007_vector_indexes.py  20260717_0008_dossier_prechecks.py  20260717_0009_finding_remediation.py  20260717_0010_agent_draft_runs.py  20260718_0011_structured_agent_context.py  20260718_0012_evaluation_runs.py  20260718_0013_tenant_security_audit.py  20260718_0014_document_security_tables.py
backend/src/medreg/: main.py
backend/src/medreg/api/: dependencies.py  router.py
backend/src/medreg/api/v1/: agent.py  applications.py  documents.py  evaluation.py  health.py  knowledge_graph.py  (+3 more)
backend/src/medreg/core/: celery_app.py  config.py  database.py
backend/tests/: conftest.py  test_agent.py  test_applications.py  test_config.py  test_document_parser.py  test_document_security.py  test_document_segmenter.py  test_documents.py  test_dossier_consistency.py  test_evaluation.py  test_health.py  test_knowledge_graph.py  test_regulations.py  test_retrieval.py  test_security.py
backend/tests/integration/: test_document_archive.py  test_neo4j_projection.py  test_postgres_repository.py  test_regulation_repository.py
(+111 files in other folders)
