[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medreg-api"
version = "0.1.0"
description = "MedReg Copilot API"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "celery>=5.4,<6",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langgraph>=1.2,<2",
  "minio>=7.2,<8",
  "neo4j>=6,<7",
  "openpyxl>=3.1,<4",
  "pydantic-settings>=2.7,<3",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "qdrant-client[fastembed]>=1.15,<1.17",
  "reportlab>=4.2,<5",
  "redis>=5,<7",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medreg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-m 'not integration'"
markers = [
  "integration: requires a migrated local PostgreSQL database",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
